# ec-gpu

ec-gpu-gen/: Cargo.toml
ec-gpu-gen/src/: fft.rs  multiexp.rs  multiexp_cpu.rs
ec-gpu-gen/src/cl/: fft.cl  multiexp.cl
gpu-tests/: Cargo.toml  build.rs
gpu-tests/benches/: multiexp.rs
gpu-tests/tests/: fft.rs  multiexp.rs
