# A derive gpu test for bn256 from filecoin project
[package]
name = "gpu-tests-bn256"
version = "0.1.0"
edition = "2021"
description = "Test for the ec-gpu project"
homepage = "https://github.com/filecoin-project/ec-gen"
repository = "https://github.com/filecoin-project/ec-gen"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
ec-gpu = { git = "https://github.com/lanbones/ec-gpu" }
ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
ff = { version = "0.12.0", default-features = false }
group = "0.12.0"
rand = "0.8"
rayon = "1.5.3"
pairing = { git = "https://github.com/lanbones/pairing", package = "pairing_bn256" }

[build-dependencies]
ec-gpu-gen = { path = "../ec-gpu-gen" }
pairing = { git = "https://github.com/lanbones/pairing", package = "pairing_bn256" }

[features]
default = ["cuda", "opencl"]
cuda = ["pairing/gpu", "ec-gpu-gen/cuda"]
opencl = ["pairing/gpu", "ec-gpu-gen/opencl"]
